# anthropic_basic_agent_streaming

./: .env.example  .gitignore  CHAT_INTERFACE_README.md  CLAUDE.md  MCP_DEBUG_SUMMARY.md  MCP_FIX_DOCUMENTATION.md  MCP_FIX_FINAL.md  MCP_INTEGRATION.md  MCP_SUCCESS.md  README.md  agent_with_tools_fixed.py  chat_interface.html  chat_server.py  cli.py  debug_mcp_connection.py  debug_mcp_github.py  debug_test.py  debug_tools.py  demo_mcp_ready.py  demo_mcp_tools.py  example.py  example_complete_integration.py  example_mcp_usage.py  mcp_command_parser.py  mcp_fix_summary.md  pyproject.toml  run_chat.py  setup.py  test_agent.py  test_agent_basic.py  test_chat_integration.py  test_chat_interface.html  test_chat_methods.py  test_chat_server.py  test_chat_server_simple.py  test_filesystem_mcp.py  test_filesystem_tools.py  test_fixed_tools.py  test_git_mcp.py  test_github_mcp_simple.sh  (+21 more)
src/claude_agent/: __init__.py  agent.py  agent_tools_fixed.py  agent_v2.py  agent_v2_complete.py  agent_with_mcp.py  agent_with_tools.py  api_request_builder.py  mcp_anthropic_bridge.py  mcp_client.py  mcp_client_fixed.py  mcp_client_real.py  mcp_client_simple.py  mcp_client_v2.py  mcp_client_working.py  mcp_session_manager.py  sse_parser.py  token_classifier.py
tests/: __init__.py  test_api_request_builder.py  test_claude_agent.py  test_mcp_client.py  test_sse_parser.py  test_token_classifier.py
